<resources>
    <string name="app_name">Kapil Guru Trainer</string>
    <string name="title_activity_login">Kapil Guru Trainer</string>
    <string name="prompt_email">Email ID</string>
    <string name="hint_email">Email *</string>
    <string name="hint_official_email">Official Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="only_welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password_characters">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_bottom">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_myclassroom">My Class Room</string>
    <string name="title_referandearn">Refer &amp; Earn</string>
    <string name="title_howtouse">How to Use</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="courses">Courses</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="hint_company_website_url">Company Website URL</string>
    <string name="course_syllabus_title">COURSE SYLLABUS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number_mand">Mobile Number*</string>
    <string name="gender">Gender</string>
    <string name="email">email</string>
    <string name="email_man">Email*</string>
    <string name="official_email">Official Email</string>
    <string name="subscription">Subscription</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="upload_document">Upload Document</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_mand">Address*</string>
    <string name="area_mand">Area*</string>
    <string name="total_experience_mand">Total Experience*</string>
    <string name="aadhar_mand">Aadhar*</string>
    <string name="choose_file">Choose File</string>
    <string name="no_file_choosen">No File Choosen</string>
    <string name="upload_file">Upload File</string>
    <string name="facebook_url">Facebook URL</string>
    <string name="twitter_url">Twitter URL</string>
    <string name="instagram_url">Instagram URL</string>
    <string name="linkedin_url">LinkedIn URL</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="ok">OK</string>
    <string name="invalid_email">please enter valid email</string>
    <string name="invalid_mobile">please enter valid mobile No</string>
    <string name="mail_or_mobile_empty">please enter valid email or mobile number</string>
    <string name="empty_password">Please enter Password</string>
    <string name="invalid_password">Please enter valid Password</string>
    <string name="try_again">Please try again after some time</string>
    <string name="start">Start</string>
    <string name="course_duration">Course Duration</string>
    <string name="course_fee">Course Fee</string>
    <string name="add_course">Add Course</string>
    <string name="add_batch">Add Batch</string>
    <string name="guest_lecture_title_man">Guest Lecture Title *</string>
    <string name="lecture_duration">"Duration of Lecture "</string>
    <string name="languages">Languages</string>
    <string name="select_languages">Select Languages *</string>
    <string name="trainer_name_man">Trainer Name *</string>
    <string name="about_guest_lecture">About Guest Lecture</string>
    <string name="lecture_date">"Lecture Date *"</string>
    <string name="lecture_time">Lecture TIme</string>
    <string name="register">Register</string>
    <string name="batch_id_text">Batch Id</string>
    <string name="batch_time_text">Batch Time</string>
    <string name="student_name">Student Name</string>
    <string name="course_start_date">Course Start Date</string>
    <string name="course_name">Course Name</string>
    <string name="attendance">Attendance</string>
    <string name="status">Status</string>
    <string name="batch_start_date">Batch Start Date</string>
    <string name="percentage">Percentage</string>
    <string name="student_id">Student Id</string>
    <string name="batch_code_text">Batch Code</string>
    <string name="start_time_man">Start Time *</string>
    <string name="start_date_man">Start Date *</string>
    <string name="start_date">Start Date</string>
    <string name="batch_time">Batch Time</string>
    <string name="tutor_name">Tutor Name</string>
    <string name="batch_details">Batch Details</string>
    <string name="total_courses">Total Courses - %s</string>
    <string name="total_study_materials">Study Materials - %s</string>
    <string name="total_recorded_courses">Recorded Courses - %s</string>
    <string name="total_batches">Total Batches - %s</string>
    <string name="total_students">Total Students (%s)</string>
    <string name="total_webinars">Total Webinars %s</string>
    <string name="total_guest_lectures">Total Demo Lectures %s</string>
    <string name="batch_id"> B0000%s</string>
    <string name="batches_count">Batches (%s)</string>
    <string name="batch_days">Batch Days</string>
    <string name="batch_code">Batch Code</string>
    <string name="batch_code_hyphen">Batch Code- %s</string>
    <string name="offline">offline</string>
    <string name="online">online</string>
    <string name="schema_code_hyphen">Schema Code- %s</string>
    <string name="batch_type">Batch Type</string>
    <string name="course_percentage">Course Percentage</string>
    <string name="time_zone">Time Zone</string>
    <string name="number_of_classes">Total Number Of Classes</string>
    <string name="number_of_student">Total Number Of Student</string>
    <string name="select_end_time">End Time *</string>
    <string name="end_time">End Time </string>
    <string name="select_class_duration">Class Duration(In Hrs)</string>
    <string name="select_start_time">Start Time *</string>
    <string name="choose_date">Start Date</string>
    <string name="total_course_duration">Total Course Duration(in days)</string>
    <string name="course_title_man">Course Title *</string>
    <string name="sub_title">Sub Title *</string>
    <string name="course_category">Course Category</string>
    <string name="trainer_years_of_experience">Trainer Years of Experience *</string>
    <string name="total_number_of_students_trained">Total Number of Students Trained *</string>
    <string name="upload_image_text_one"> \u2022 Course Image Should not Contain Any Text or Personal Information.</string>
    <string name="upload_image_text_two"> \u2022 Upload an Image Relevant  to Your Lecture.</string>
    <string name="upload_video_text_one"> \u2022 Video Should not Contain Any Text or Personal Information.</string>
    <string name="upload_video_text_two"> \u2022 Upload demo lecture of a trainer who conduct the classes.</string>
    <string name="upload_image_text"><u>Upload Image</u></string>
    <string name="upload_video_text"><u>Upload Video</u></string>
    <string name="upload_video_tip_one"> \u2022 You don\'t need to buy Equipment, Most SmartPhone Cameras can record HD Videos.</string>
    <string name="upload_video_tip_two"> \u2022 Students need to hear you, Reduce background Noise and Echo.</string>
    <string name="upload_video_tip_three"> \u2022 Turn off Overheard Lights, Light the Scene and your face.</string>
    <string name="tips">Tips :</string>
    <string name="announcements">Announcements</string>
    <string name="my_courses">My Courses</string>
    <string name="guest_lectures">Guest Lectures</string>
    <string name="add_demo_lecture">Add Demo Lecture</string>
    <string name="course">Course</string>
    <string name="no_of_attendees">No Of Attendees *</string>
    <string name="hint_no_of_attendees">100</string>
    <string name="duration">Duration</string>
    <string name="hint_duration">1:30</string>
    <string name="hint_start_time">6:30 pm</string>
    <string name="hint_lecture_desc">lecture description</string>
    <string name="select_option">Select Option</string>
    <string name="select_image">Choose from Gallery</string>
    <string name="click_image">Take a Picture</string>
    <string name="batch_text">Batch ID</string>
    <string name="view_text"><u>View</u></string>
    <string name="student_id_text">KCS000%s</string>
    <string name="student_id_hyphen">Student ID- %s</string>
    <string name="this_is_your_space">This is your space</string>
    <string name="get_started_by_adding_courses">Get started by adding your courses and let the knowledge flow!</string>
    <string name="add_course_all_caps">ADD COURSE</string>
    <string name="batch">BATCH</string>
    <string name="batches">BATCHES</string>
    <string name="no">No</string>
    <string name="Enter_OTP">Enter OTP</string>
    <string name="messages">Messages</string>
    <string name="validate_otp">Validate OTP</string>
    <string name="please_enter_otp">Please enter otp sent to %1$s</string>
    <string name="validate">Validate</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="trainer_name">Trainer Name</string>
    <string name="gallery">Gallery</string>
    <string name="earnings">Earnings</string>
    <string name="refer_and_earn">Refer &amp; Earn</string>
    <string name="reports">Reports</string>
    <string name="todays_schedule">Today\'s schedule</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="you_want_to_delete">You want to delete %s</string>
    <string name="yes_delete_it">Yes, Delete It</string>
    <string name="my_students">My Students</string>
    <string name="certificate">Certificate</string>
    <string name="certificates">Certificates</string>
    <string name="follow_us_on">Follow us on</string>
    <string name="linkedin">linkedin</string>
    <string name="youtube">youtube</string>
    <string name="instagram">instagram</string>
    <string name="twitter">twitter</string>
    <string name="facebook">facebook</string>
    <string name="get_in_touch">Let\'s Get in Touch</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="fee_management">Fee Management</string>
    <string name="add_faculty">Add Faculty</string>
    <string name="testimonials">Testimonials</string>
    <string name="attendance_management">Attendance\nManagement</string>
    <string name="create_coupon">Create Coupon</string>
    <string name="permissions">Permissions</string>
    <string name="add_live_course">Add Live Course</string>
    <string name="add_study_material">Add Study Material</string>
    <string name="add_recorded_courses">Add Recorded Courses</string>
    <string name="add_free_classes">Add Free Classes</string>
    <string name="exams">Exams</string>
    <string name="student_enquiry">Student Enquiry</string>
    <string name="promotional_images">Promotional Images</string>
    <string name="share_app">Share App</string>
    <string name="how_to_use">How To Use</string>
    <string name="terms_and_conditions_text">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>