<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/reports" android:title="@string/reports"/>
    <item android:id="@+id/profile" android:title="@string/profile"/>
    <item android:id="@+id/earnings" android:title="@string/earnings"/>
    <item android:id="@+id/certificates" android:title="@string/certificates"/>
    <item android:id="@+id/subscription" android:title="@string/subscription"/>
    <item android:id="@+id/promotional_images" android:title="@string/promotional_images"/>
    <item android:id="@+id/share_app" android:title="@string/share_app"/>
    <item android:id="@+id/how_to_use" android:title="@string/how_to_use"/>
    <item android:id="@+id/get_in_touch" android:title="@string/get_in_touch"/>
    <item android:id="@+id/terms_and_conditions" android:title="@string/terms_and_conditions_text"/>
    <item android:id="@+id/privacy_policy" android:title="@string/privacy_policy"/>
    <item android:id="@+id/log_out" android:title="@string/logout"/>
</menu>