<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/nav_home_selector"
        android:title="@string/title_home" />


    <item android:id="@+id/navigation_profile"
        android:icon="@drawable/nav_profile_selector"
        android:iconTint="@color/black_222222"
        android:title="@string/title_profile"/>

    <item android:id="@+id/navigation_myclassroom"
        android:icon="@drawable/nav_my_class_room_selector"
        android:title="@string/title_myclassroom"/>

    <item android:id="@+id/navigation_referandearn"
        android:icon="@drawable/nav_refer_selector"
        android:title="@string/title_referandearn"/>

    <item android:id="@+id/navigation_howtouse"
        android:icon="@drawable/nav_use_selector"
        android:title="@string/title_howtouse"/>
</menu>