<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kapilguru.trainer.ui.home.HomeScreenFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_screen" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.kapilguru.trainer.ui.profile.ProfileOptionsFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile_options" />

    <fragment
        android:id="@+id/navigation_myclassroom"
        android:name="com.kapilguru.trainer.myClassroom.MyClassroomFragment"
        android:label="@string/title_myclassroom"
         />
<!--    tools:layout="@layout/fragment_home"-->

    <fragment
        android:id="@+id/navigation_referandearn"
        android:name="com.kapilguru.trainer.referandearn.ReferAndEarnFragment"
        android:label="@string/title_referandearn"
        tools:layout="@layout/fragment_refer_and_earn"/>

    <fragment
        android:id="@+id/navigation_howtouse"
        android:name="com.kapilguru.trainer.howtouse.HowToUseFragment"
        android:label="@string/title_howtouse"
        tools:layout="@layout/fragment_how_to_use"/>
</navigation>