<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <!--        <variable-->
        <!--            name="courseViewModel"-->
        <!--            type="com.kapilguru.trainer.ui.courses.courses_list.viewModel.CourseViewModel" />-->
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_bg"
            android:orientation="vertical">

            <include
                android:id="@+id/actionbar"
                layout="@layout/custom_action_bar_layout" />

            <include
                android:id="@+id/course_empty_view"
                layout="@layout/my_course_empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="50dp"
                android:visibility="gone" />


            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/dimen_15dp"
                android:layout_marginVertical="@dimen/dimen_5dp"
                android:background="@drawable/main_bg"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/aCTVTrainerName"
                    style="@style/MyAppEditTextViewStyle_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/aCTVtTrainerNameValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@null"
                        android:hint="@string/trainer_name"
                        android:inputType="text"
                        android:maxLength="100"
                        android:text=""
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/aCTVtTrainerEmail"
                    style="@style/MyAppEditTextViewStyle_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/aCTVtTrainerEmailValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@null"
                        android:hint="@string/email"
                        android:inputType="text"
                        android:maxLength="100"
                        android:text=""
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/aCTVtTrainerPhone"
                    style="@style/MyAppEditTextViewStyle_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/aCTVtTrainerPhoneValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@null"
                        android:hint="Phone"
                        android:inputType="phone"
                        android:maxLength="100"
                        android:text=""
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dimen_5dp"
                    android:text="@string/permissions"
                    android:textColor="@color/blue"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_live_course"
                    app:switchPadding="@dimen/dimen_20dp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_recorded_courses"
                    app:switchPadding="@dimen/dimen_20dp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_study_material"
                    app:switchPadding="@dimen/dimen_20dp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_free_classes"
                    app:switchPadding="@dimen/dimen_20dp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/todays_schedule"
                    app:switchPadding="@dimen/dimen_20dp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exams"
                    app:switchPadding="@dimen/dimen_20dp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student_enquiry"
                    app:switchPadding="@dimen/dimen_20dp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_students"
                    app:switchPadding="@dimen/dimen_20dp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/messages"
                    app:switchPadding="@dimen/dimen_20dp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attendance_management"
                    app:switchPadding="@dimen/dimen_20dp" />


                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fee_management"
                    app:switchPadding="@dimen/dimen_20dp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_coupon"
                    app:switchPadding="@dimen/dimen_20dp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_faculty"
                    app:switchPadding="@dimen/dimen_20dp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gallery"
                    app:switchPadding="@dimen/dimen_20dp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/testimonials"
                    app:switchPadding="@dimen/dimen_20dp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/earnings"
                    app:switchPadding="@dimen/dimen_20dp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/certificates"
                    app:switchPadding="@dimen/dimen_20dp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subscriptions"
                    app:switchPadding="@dimen/dimen_20dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>