<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:textSize="18sp"
        android:layout_marginVertical="8dp"
        tools:text="@string/are_you_sure" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginHorizontal="16dp"
        tools:text="@string/you_want_to_delete" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_negative"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/blue_3"
            android:gravity="center"
            android:text="@string/no" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_positive"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/blue_3"
            android:gravity="center"
            android:text="@string/yes_delete_it" />

    </LinearLayout>
</LinearLayout>