<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.kapilguru.trainer.forgotPassword.viewModel.ForgotPasswordViewModel"/>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".forgotPassword.GetOtpFragment"
    android:layout_margin="8dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_validate_otp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/validate_otp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tv_enter_otp_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_validate_otp"
        android:text="@string/please_enter_otp"
        android:textSize="15sp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/et_otp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/Enter_OTP"
        android:inputType="number"
        android:text="@={viewModel.otp}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_validate_otp"/>

    <TextView
        android:id="@+id/tv_resendOtp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_otp"
        android:text="@string/resend_otp"
        android:textSize="15sp"
        android:padding="4dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_validate_otp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="64dp"
        android:text="@string/validate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_otp" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>